Move ctors symbol in its own section to force alignment. Add -g3 flag for release compilation.

--- a/BaseTools/Conf/tools_def.template
+++ b/BaseTools/Conf/tools_def.template
@@ -2416,9 +2416,9 @@ RELEASE_GCC48_AARCH64_CC_FLAGS   = DEF(GCC48_AARCH64_CC_FLAGS) -Wno-unused-but-s
 
 #Jief removed lto flag. It is set in CLover.dsc, from the env var 'DISABLE_LTO'
   DEBUG_GCC53_X64_CC_FLAGS       = DEF(GCC53_X64_CC_FLAGS) -g3 -O0
-RELEASE_GCC53_X64_CC_FLAGS       = DEF(GCC53_X64_CC_FLAGS)     -Os -Werror
+RELEASE_GCC53_X64_CC_FLAGS       = DEF(GCC53_X64_CC_FLAGS) -g3 -Os -Werror
   DEBUG_GCC53_X64_CXX_FLAGS      = DEF(GCC53_X64_CC_FLAGS) -g3 -O0
-RELEASE_GCC53_X64_CXX_FLAGS      = DEF(GCC53_X64_CC_FLAGS)     -Os -Werror
+RELEASE_GCC53_X64_CXX_FLAGS      = DEF(GCC53_X64_CC_FLAGS) -g3 -Os -Werror
 
 #
 #
