--- a/BaseTools/Conf/tools_def.template
+++ b/BaseTools/Conf/tools_def.template
@@ -2079,7 +2079,7 @@ DEFINE GCC5_AARCH64_ASLDLINK_FLAGS   = DEF(GCC49_AARCH64_ASLDLINK_FLAGS)
 DEFINE GCC5_ASLCC_FLAGS              = DEF(GCC49_ASLCC_FLAGS) -fno-lto
 
 DEFINE GCC53_IA32_CC_FLAGS           = DEF(GCC49_IA32_CC_FLAGS)
-DEFINE GCC53_X64_CC_FLAGS            = DEF(GCC49_X64_CC_FLAGS) -fno-unwind-tables -Wno-incompatible-ms-struct -mms-bitfields -fno-ms-extensions -ffreestanding -fno-exceptions -nostdinc
+DEFINE GCC53_X64_CC_FLAGS            = DEF(GCC49_X64_CC_FLAGS) -fno-unwind-tables -Wno-incompatible-ms-struct -mms-bitfields -fno-ms-extensions -ffreestanding -fno-exceptions
 DEFINE GCC53_IA32_X64_DLINK_COMMON   = -nostdlib -Wl,-n,-q,--gc-sections,-z,common-page-size=0x40,--defsym=PECOFF_HEADER_SIZE=0x240,--script=$(EDK_TOOLS_PATH)/Scripts/GccBase.lds
 
 DEFINE GCC53_IA32_X64_ASLDLINK_FLAGS = DEF(GCC53_IA32_X64_DLINK_COMMON),--entry,ReferenceAcpiTable,-u,ReferenceAcpiTable
@@ -2593,12 +2593,12 @@ RELEASEMACOS_XCODE8_X64_DLINK_FLAGS      = -arch x86_64 -nostdlib -Wl,-u,_$(IMAG
  
 
 
-          DEBUG_XCODE8_X64_CC_FLAGS      = -g -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS) -target x86_64-pc-win32-macho "-DEFIAPI=__attribute__((ms_abi))"
-     DEBUGMACOS_XCODE8_X64_CC_FLAGS      = -g -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS)
+          DEBUG_XCODE8_X64_CC_FLAGS      = -g3 -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS) -target x86_64-pc-win32-macho "-DEFIAPI=__attribute__((ms_abi))"
+     DEBUGMACOS_XCODE8_X64_CC_FLAGS      = -g3 -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS)
         RELEASE_XCODE8_X64_CC_FLAGS      =            -Os DEF(XCODE8_COMMON_FLAGS) -target x86_64-pc-win32-macho "-DEFIAPI=__attribute__((ms_abi))" -Werror
    RELEASEMACOS_XCODE8_X64_CC_FLAGS      =            -Os DEF(XCODE8_COMMON_FLAGS)
-         DEBUG_XCODE8_X64_CXX_FLAGS      = -g -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS) -target x86_64-pc-win32-macho "-DEFIAPI=__attribute__((ms_abi))"
-    DEBUGMACOS_XCODE8_X64_CXX_FLAGS      = -g -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS)
+         DEBUG_XCODE8_X64_CXX_FLAGS      = -g3 -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS) -target x86_64-pc-win32-macho "-DEFIAPI=__attribute__((ms_abi))"
+    DEBUGMACOS_XCODE8_X64_CXX_FLAGS      = -g3 -gdwarf -O0 DEF(XCODE8_COMMON_FLAGS)
        RELEASE_XCODE8_X64_CXX_FLAGS      =            -Os DEF(XCODE8_COMMON_FLAGS) -target x86_64-pc-win32-macho "-DEFIAPI=__attribute__((ms_abi))" -Werror
   RELEASEMACOS_XCODE8_X64_CXX_FLAGS      =            -Os DEF(XCODE8_COMMON_FLAGS)
 
