Validator : display version.

--- a/Xcode/CloverConfigPlistValidator/CloverConfigPlistValidator.xcodeproj/xcshareddata/xcschemes/CloverConfigPlistValidator.xcscheme
+++ b/Xcode/CloverConfigPlistValidator/CloverConfigPlistValidator.xcodeproj/xcshareddata/xcschemes/CloverConfigPlistValidator.xcscheme
@@ -69,7 +69,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "config-test2.plist"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
