--- a/Xcode/CloverConfigPlistValidator/CloverConfigPlistValidator.xcodeproj/xcshareddata/xcschemes/CloverConfigPlistValidator_Release.xcscheme
+++ b/Xcode/CloverConfigPlistValidator/CloverConfigPlistValidator.xcodeproj/xcshareddata/xcschemes/CloverConfigPlistValidator_Release.xcscheme
@@ -65,7 +65,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "config-nowarning-noerror.plist"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "config-test2.plist"
