--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OpenCorePkg"]
 	path = OpenCorePkg
-	url = https://github.com/CloverHackyColor/OpenCorePkg.git
+	url = https://github.com/serdeliuk/OpenCorePkg
