Clover OC.0.6.5 upgrade

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "OpenCorePkg"]
 	path = OpenCorePkg
-	url = https://github.com/serdeliuk/OpenCorePkg
+	url = https://github.com/serdeliuk/OpenCorePkg.git
+	branch = master
