--- a/CloverPackage/CloverV2/EFI/CLOVER/config-oc-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-oc-sample.plist
@@ -36,7 +36,7 @@
 			<key>ScanPolicy</key>
 			<integer>0</integer>
 			<key>SecureBootModel</key>
-			<string>j680</string>
+			<string>Disabled</string>
 			<key>Vault</key>
 			<string>Optional</string>
 		</dict>
