Add ExtendBTFeatureFlags to Quirks

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -1156,6 +1156,8 @@
 		<true/>
 		<key>DummyPowerManagement</key>
 		<false/>
+		<key>ExtendBTFeatureFlags</key>
+		<false/>
 		<key>ExternalDiskIcons</key>
 		<false/>
 		<key>IncreasePciBarSize</key>
