--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -995,6 +995,12 @@
 		<string>Apple Inc.</string>
 		<key>#FirmwareFeatures</key>
 		<string>0xC0001403</string>
+		<key>#FirmwareFeaturesMask</key>
+		<string>0xFFFFFFFF</string>
+		<key>#ExtendedFirmwareFeatures</key>
+		<string>0x8FE001403</string>
+		<key>#ExtendedFirmwareFeaturesMask</key>
+		<string>0xFFFFFFFFFF</string>
 		<key>#PlatformFeature</key>
 		<string>0x00</string>
 		<key>#Trust</key>
@@ -1003,8 +1009,6 @@
 		<string>C0225060SAMF651AX</string>
 		<key>#BiosVendor</key>
 		<string>Apple Inc.</string>
-		<key>#FirmwareFeaturesMask</key>
-		<string>0xFFFFFFFF</string>
 		<key>#BoardManufacturer</key>
 		<string>Apple Inc.</string>
 		<key>#BoardType</key>
